--- a/public/update.html
+++ b/public/update.html
@@ -1,14 +1,15 @@
 <div class="container">
     <h3>Update Contact</h3>
-<form class="form-group">
+<form class="form-group" ng-submit="updateContact()">
     <label>Name</label>
-    <input type="text" ng-model="formData.name" class="form-control" placeholder="Name..."><br>
+    <input type="text" ng-model="newData.name" class="form-control" placeholder="Name..."><br>
     <label>Email</label>
-    <input type="text" ng-model="formData.email" class="form-control" placeholder="Email..."><br>
+    <input type="text" ng-model="newData.email" class="form-control" placeholder="Email..."><br>
     <label>Contact-No</label>  
-    <input type="text" ng-model="formData.number" placeholder="Mobile-no..." class="form-control"><br>
+    <input type="text" ng-model="newData.number" placeholder="Mobile-no..." class="form-control"><br>
     <label>Address</label>
-    <input type="text" ng-model="formData.address" class="form-control" placeholder="Address..."><br>
-    <a ng-href="#!updatedata/"><button class="btn btn-sm btn-success">Update</button></a>
+    <input type="text" ng-model="newData.address" class="form-control" placeholder="Address..."><br>
+    {{formData}}
+    <button class="btn btn-sm btn-success">Update</button>
     </form>
 </div>
