--- a/public/update.html
+++ b/public/update.html
@@ -2,14 +2,13 @@
     <h3>Update Contact</h3>
 <form class="form-group" ng-submit="updateContact()">
     <label>Name</label>
-    <input type="text" ng-model="newData.name" class="form-control" placeholder="Name..."><br>
+    <input type="text" ng-model="newData.name" class="form-control"value="formData.name" placeholder="Name..."><br>
     <label>Email</label>
     <input type="text" ng-model="newData.email" class="form-control" placeholder="Email..."><br>
     <label>Contact-No</label>  
     <input type="text" ng-model="newData.number" placeholder="Mobile-no..." class="form-control"><br>
     <label>Address</label>
     <input type="text" ng-model="newData.address" class="form-control" placeholder="Address..."><br>
-    {{formData}}
     <button class="btn btn-sm btn-success">Update</button>
     </form>
 </div>
